# Agentic-work

./: .dockerignore  .env.template  .gitignore  BATCH_TESTING.md  BATCH_TESTING_LIVE_PROGRESS.md  BATCH_TESTING_WEB.md  BENCHMARK.md  BENCHMARK_CLI.md  BENCHMARK_TESTING.md  BENCHMARK_TESTING_WEB.md  BENCHMARK_WEB.md  CHANGELOG.md  CONTRIBUTING.md  HACKATHON_SYSTEM_DIAGRAM.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  README.md  SCORING_SYSTEM.md  activate_env.sh  azure_openai_utils.py  batch_test_queries.py  benchmark_queries.py  check_csv.py  create_batch_template.py  create_test_template.py  create_test_template_csv.py  embedding_index.py  example_catalog.py  examples_loader.py  kql_client.py  logs_agent.py  main.py  nl_to_kql.py  prompt_builder.py  pytest.ini  queries-fixed.xlsx  query_scorer.py  requirements-all.txt  requirements-frozen.txt  requirements.txt  (+10 more)
app_insights_capsule/: README.md
azure_agent/: monitor_client.py
containers_capsule/: README.md  container_ontology.md  diagram_container_ontology.mmd  domain_capsule_containerlogs.txt.deprecated  kql_functions_containerlogs.kql  prompt_guidelines.md  prompt_template_containerlogs.txt.deprecated  public_shots.csv  system_base.txt
docs/: architecture_components.mmd  architecture_sequence.mmd  mini_architecture_components.mmd  prompt_guidelines.md
my-first-mcp-server/: README.md  mcp_server.py  pyproject.toml  rest_api.py
project_summary/: 01_high_level_architecture.mmd  02_component_responsibilities.md  03_data_flow_ascii.md  04_sequence_diagram.mmd  05_extensibility_points.md  PROJECT_SUMMARY.md  README.md
(+2745 files in other folders)
