[project]
name = "kql-mcp-server"
version = "0.1.0"
description = "MCP server for querying Azure Log Analytics using KQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "python-dotenv",
    "azure-identity",
    "azure-monitor-query",
    "pydantic"
]= "kql-mcp-server"
version = "0.1.0"
description = "MCP server for querying Azure Log Analytics using KQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "azure-identity",
    "azure-monitor-query",
    "mcp-agent-lib>=0.4.0",
    "pydantic"
]
